--- a/README.asciidoc
+++ b/README.asciidoc
@@ -2,19 +2,17 @@ OpenFFA Xatrix fork
 ===================
 
 This is my first attempt to extend OpenFFA Quake 2 Mod to support the xatrix Mission Pack 1 "The Reconing".
-I merged the 3.20 xatrix code in and it compiles. But this is still a big todo as it is untested and there are known bugs.
-
-Problems:
----------
-- the server crashes when a player is caught by his own trap (possibly related to generation of the "food cube")
+I merged the 3.20 xatrix code in and it compiles. But this is still a big todo as it is totally untested.
 
 ToDo:
 -----
+- testing
+- merge the 3.24 xatrix changes by knightmare in
+- import features from the quake2plus-tsmod xatrix mod
+- make xatrix entities switchable by a server console variable ("xatrix")
 - properly handle quadfire item in quad-chasecam mode
 - implement weapon statistics for the new xatrix weapons
-- merge the 3.24 xatrix changes by knightmare in
-- make xatrix entities switchable by a server console variable ("xatrix")
-- optional: import features from the quake2plus-tsmod xatrix mod
+
 
 OpenFFA Manual
 ==============
